src/objects/Subscription__c.object
<CustomObject>
    <description>Object to manage subscriptions (Memberships, Complywise Subscriptions and other ongoing product deliveries)</description>
    <fields>
        <fullName>Account_Invoice_Email__c</fullName>
        <description>Used by DDP - pulls invoice email account</description>
        <formula>Account_Name__r.c2g__CODAInvoiceEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Renewal emails will be cc&apos;d to account invoice email address</inlineHelpText>
        <label>Account Invoice Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_to_timed_workflow__c</fullName>
        <defaultValue>true</defaultValue>
        <description>All time based subscription workflows include this field set to true to to include in workflow.  Si if you have a record which meets criteria but for some reason is not in the workflow - set this field to false then true.</description>
        <inlineHelpText>Set this to false then back to true to ad this record to time based workflows.  Note other criteria will be required to ad to workflow, see workflows for details</inlineHelpText>
        <label>Add to timed workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Create_Sales_Invoice__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Default TRUE, if this is unchecked the automated renewals will not create an invoice</description>
        <inlineHelpText>Uncheck this box if you do not want an invoice created for this subscription on the first reminder date</inlineHelpText>
        <label>Auto Create Sales Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CB_Ref__c</fullName>
        <formula>LEFT( PK_CB_OPP_ID__c ,10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Printed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ticked the certificate has been previously printed for this subscription</inlineHelpText>
        <label>Certificate Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consolidated_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This subscription is a consolidation of multiple subscriptions into one (Currently used by the system to determine what dimension 2 code to used.</inlineHelpText>
        <label>Consolidated Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Invoice_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Invoice Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The primary contact for this subscription</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Renewal_Objects_on__c</fullName>
        <description>Calculates date renewal objects will be created based on longest reminder days</description>
        <formula>IF 
(
   Includes_SUSA_Product__c = True, 
   (End_Date__c - Longest_Reminder_Days__c) - 35,

   IF ( 
      Includes_E_Delivery_Product__c = True, 
      (End_Date__c - Longest_Reminder_Days__c) - 45, 
      (End_Date__c - Longest_Reminder_Days__c) - 7
      )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date on which the subscription with automatically create the renewal opportunity &amp; subscription etc..</inlineHelpText>
        <label>Create Renewal Objects on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Credited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Credited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DrawLoop_Start_Date__c</fullName>
        <description>Used for DrawLoop calculated by subscription start date - 1</description>
        <formula>Start_Date__c -1</formula>
        <label>DrawLoop Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next_First_Reminder_EMAIL__c</fullName>
        <description>Defines DDP and deployment to use in DrawLoop as well as passing record id&apos;s</description>
        <formula>IF 
(Includes_RCP_Product__c = True, 
&quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L72B;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000L7PY&quot;, 

IF (Includes_E_Delivery_Product__c = True, 
&quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L7Ae;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000LAFr&quot;, 

IF (Includes_SUSA_Product__c = True,
&quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L79b;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000L9Tw&quot;,

&quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L6EAMA0;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000L6bv&quot;
)
)
)</formula>
        <label>LOOP Member First Reminder EMAIL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next_First_Reminder_by_POST__c</fullName>
        <description>Defines DDP and deployment to use in DrawLoop as well as passing record id&apos;s</description>
        <formula>IF 
( Includes_RCP_Product__c = True, &quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L72B;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000L7Pb&quot;, 

IF ( Includes_E_Delivery_Product__c = True, 
&quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L7Ae;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000LAFs&quot;, 

IF ( Includes_SUSA_Product__c = True, 
&quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L79b;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000L9Tw&quot;, 

&quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L6EAMA0;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000L6bv&quot;

)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOOP Member First Reminder by POST</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next_Renewal_Wel_Inv_by_POST__c</fullName>
        <description>Defines DDP and deployment to use in DrawLoop as well as passing record id&apos;s</description>
        <formula>IF ( Includes_RCP_Product__c = True, &quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L72B;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000L7Pb&quot;, &quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L6dz;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000L72K&quot;)</formula>
        <inlineHelpText>The Drawloop command line to determine what pack and deployment method to use when sending the welcome post pack.</inlineHelpText>
        <label>LOOP Member Renewal Wel Inv Pack by POST</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next_Renewal_Welcome_by_Emai__c</fullName>
        <description>Defines DDP and deployment to use in DrawLoop as well as passing record id&apos;s</description>
        <formula>IF ( Includes_RCP_Product__c = True, &quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L72B;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000L7PZ&quot;, &quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L6EU;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000L6b2&quot;)</formula>
        <inlineHelpText>Drawloop configuration for sending the membership welcome pack.</inlineHelpText>
        <label>LOOP Member Renewal Welcome Pack by Emai</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next_Renewal_Welcome_by_POST__c</fullName>
        <description>Defines DDP and deployment to use in DrawLoop as well as passing record id&apos;s</description>
        <formula>IF ( Includes_RCP_Product__c = True, &quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L72B;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000L7Pb&quot;, &quot;SFSubscription__c:&quot; &amp; Id &amp; &quot;;DDPId:a3TD0000000L6EU;SFContact:&quot; &amp; Contact__c &amp;&quot;;Deploy:a3SD0000000L6b2&quot;)</formula>
        <inlineHelpText>The Drawloop command line to determine what pack and deployment method to use when sending the welcome post pack.</inlineHelpText>
        <label>LOOP Member Renewal Welcome Pack by POST</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next_Second_Reminder_EMAIL__c</fullName>
        <description>Defines DDP and deployment to use in DrawLoop as well as passing record id&apos;s</description>
        <formula>&quot;SFSubscription__c:&quot; &amp;  Id &amp; &quot;;DDPId:a3TD0000000L6EF;SFContact:&quot; &amp;  Contact__c  &amp;&quot;;Deploy:a3SD0000000L6bH&quot;</formula>
        <label>LOOP Member Second Reminder EMAIL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next_Second_Reminder_POST__c</fullName>
        <description>Defines DDP and deployment to use in DrawLoop as well as passing record id&apos;s</description>
        <formula>&quot;SFSubscription__c:&quot; &amp;  Id &amp; &quot;;DDPId:a3TD0000000L6EF;SFContact:&quot; &amp;  Contact__c  &amp;&quot;;Deploy:a3SD0000000L6bM&quot;</formula>
        <label>LOOP Member Second Reminder POST</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next_Third_Reminder_EMAIL__c</fullName>
        <description>Defines DDP and deployment to use in DrawLoop as well as passing record id&apos;s</description>
        <formula>&quot;SFSubscription__c:&quot; &amp;  Id &amp; &quot;;DDPId:a3TD0000000L6EK;SFContact:&quot; &amp;  Contact__c  &amp;&quot;;Deploy:a3SD0000000L6bW&quot;</formula>
        <inlineHelpText>Used by drawloop workflow outbound message to determine which pack and how to deploy pack.</inlineHelpText>
        <label>LOOP Member Third Reminder EMAIL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next_Third_Reminder_POST__c</fullName>
        <description>Defines DDP and deployment to use in DrawLoop as well as passing record id&apos;s</description>
        <formula>&quot;SFSubscription__c:&quot; &amp;  Id &amp; &quot;;DDPId:a3TD0000000L6EK;SFContact:&quot; &amp;  Contact__c  &amp;&quot;;Deploy:a3SD0000000L6bb&quot;</formula>
        <inlineHelpText>Used by drawloop third membership reminder workflow outbound message to determine what pack to use and how to deploy the contents.</inlineHelpText>
        <label>LOOP Member Third Reminder POST</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Text_2__c</fullName>
        <formula>IF(  ISPICKVAL(Account_Name__r.Principle_Address_Global_Region__c, &quot;UK&quot;) ,

&quot;NEW for 2012/13:  We are delighted to announce that members will receive 100 free places on the new British Safety Council Introduction to Workplace Health and Safety e-learning course – worth over £1,000.&quot;

,&quot;&quot;)</formula>
        <inlineHelpText>Text used in Drawloop reminder letters. Displayed if the sub account global region is the UK</inlineHelpText>
        <label>Drawloop Text 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Text_3__c</fullName>
        <formula>IF( ISPICKVAL(Account_Name__r.Principle_Address_Global_Region__c, &quot;UK&quot;) , 

BR() + &quot;The course covers the basic health and safety knowledge that any employee, contractor or visitor to a workplace, should know and understand. It is an easy and time efficient way to support your induction programme or refresher training. The course prepares learners for the British Safety Council Level 1 qualification in Health and Safety (assessments can be purchased and undertaken via registered course providers.) Learners get a certificate of completion which can help you keep training records for your staff. &quot; + BR() + BR() + &quot;For more information and to view a demonstration of the course, visit www.britsafe.org/memberupdate.  Please note the above offer is in place of the free 100 Level 1 assessment offer.&quot;
,&quot;&quot;)</formula>
        <inlineHelpText>Text used in Drawloop reminder letters. Displayed if the sub account global region is the UK</inlineHelpText>
        <label>Drawloop Text 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Text_4__c</fullName>
        <formula>IF( ISPICKVAL(Account_Name__r.Principle_Address_Global_Region__c, &quot;UK&quot;) , 

&quot;and a voucher with instructions on how to access your free 100 e-learning places&quot;

,&quot;&quot;)</formula>
        <inlineHelpText>Text used in Drawloop reminder letters. Displayed if the sub account global region is the UK</inlineHelpText>
        <label>Drawloop Text 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Text_Top_1__c</fullName>
        <formula>IF(  Start_Date__c  &gt;= DATE(2012,09,1), 

&quot;Please find your renewal notice with your new rate enclosed. We have made significant improvements to our membership benefits, such as free access to 100 e-learning course places and additional downloads and templates as part of the Tools and Templates package.&quot;

, &apos;&apos;)</formula>
        <inlineHelpText>Text used in Drawloop reminder letters. This only is displayed if the end date is after 1st Sept</inlineHelpText>
        <label>Drawloop Text Top 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Earliest_Lapse_Days__c</fullName>
        <label>Earliest Lapse Days</label>
        <summarizedField>Subscription_Line__c.Lapse_Days_Number__c</summarizedField>
        <summaryForeignKey>Subscription_Line__c.Subscription__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_Date_90__c</fullName>
        <description>calculate end date minus 90 days used to filter out subscriptions already renewed in coursebooker as part of the renewal process</description>
        <formula>End_Date__c - 90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this field takes the subscription end date minus 90 days</inlineHelpText>
        <label>End Date - 90</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Reminder_Date__c</fullName>
        <formula>IF(  Subscription_Value__c &gt; 0,
   IF(  ISPICKVAL(Type__c, &apos;Renewal&apos;),
      IF( ISPICKVAL(Paying_By__c, &apos;Direct Debit&apos;), Start_Date__c - 20, Start_Date__c - Longest_Reminder_Days__c),
      null
   ),
   null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date is only displayed if the subscription is a renewal, not paying by direct debit and the subscription value is greater than zero.</inlineHelpText>
        <label>First Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_reminder_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First reminder email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_reminder_post_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First reminder post sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_reminder_sent__c</fullName>
        <formula>IF(
   OR(First_reminder_email_sent__c = True, First_reminder_post_sent__c = True) = True, 
   &apos;Yes&apos;, 
   &apos;No&apos;
)</formula>
        <inlineHelpText>If either the first reminder has been sent using email or post this displays &apos;Yes&apos; otherwise displays &apos;No&apos;</inlineHelpText>
        <label>First reminder sent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flagged_for_Cleansing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines record which has been flagged during Subscription cleaning process</description>
        <label>Flagged_for_Cleansing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_E_Delivery_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if this Subscription contains an E-Delivery Product</inlineHelpText>
        <label>Includes E-Delivery Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_Guides_Publication_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Guides Publication Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_HSWA_Publication_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes HSWA Publication Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_Info_Membership_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ticked this subscription includes an Info membership product.</inlineHelpText>
        <label>Includes Info Membership Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_Membership_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked automatically by Workflow on creation of Subscription Line</inlineHelpText>
        <label>Includes Membership Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_Publication_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Publication Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_RCP_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked automatically by Workflow on save of Subscription Line</inlineHelpText>
        <label>Includes RCP Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_SUSA_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ticked this subscription includes a SUSA subscription product.</inlineHelpText>
        <label>Includes SUSA Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_Safety_Management_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Safety Management Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_Tools_Membership_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is ticked the subscription includes a tools membership product.</inlineHelpText>
        <label>Includes Tools Membership Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Product__c</fullName>
        <description>Denotes Subscription has international products associated to it</description>
        <formula>CONTAINS(Product_Codes__c,&apos;1ISMI -1-5;1ISMT -1-5;1IMS-1-5&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This Subscription has international products associated to it</inlineHelpText>
        <label>International Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Billing_Address__c</fullName>
        <description>Created to use on the Invoice Template for drawloop</description>
        <formula>IF(ISBLANK(Renewal_Sales_Invoice__r.c2g__Opportunity__c),
Renewal_Sales_Invoice__r.c2g__Account__r.Name+ BR() +
IF(ISBLANK(Renewal_Sales_Invoice__r.c2g__Account__r.BillingStreet),&quot;&quot;,Renewal_Sales_Invoice__r.c2g__Account__r.BillingStreet+ BR() ) +
IF(ISBLANK(Renewal_Sales_Invoice__r.c2g__Account__r.BillingCity),&quot;&quot;,Renewal_Sales_Invoice__r.c2g__Account__r.BillingCity+ BR() ) +
IF(ISBLANK(Renewal_Sales_Invoice__r.c2g__Account__r.BillingState),&quot;&quot;, Renewal_Sales_Invoice__r.c2g__Account__r.BillingState+ BR() ) +
IF(ISBLANK(Renewal_Sales_Invoice__r.c2g__Account__r.BillingPostalCode),&quot;&quot;,Renewal_Sales_Invoice__r.c2g__Account__r.BillingPostalCode+ BR() ) +
IF(ISBLANK(Renewal_Sales_Invoice__r.c2g__Account__r.BillingCountry),&quot;&quot;,Renewal_Sales_Invoice__r.c2g__Account__r.BillingCountry),

Renewal_Sales_Invoice__r.c2g__Account__r.Name + BR() +
IF(ISBLANK(Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_Address_Building__c),&quot;&quot;,Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_Address_Building__c+ BR() ) +
IF(ISBLANK(Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_Street__c),&quot;&quot;,Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_Street__c+ BR() ) +
IF(ISBLANK(Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_Area__c),&quot;&quot;,Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_Area__c+ BR() ) +
IF(ISBLANK(Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_City__c),&quot;&quot;,Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_City__c+ BR() ) +
IF(ISBLANK(Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_State__c),&quot;&quot;,Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_State__c+ BR() ) +
IF(ISBLANK(Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_PostalCode__c),&quot;&quot;,Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_PostalCode__c+ BR() ) +
IF(ISPICKVAL(Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_Country__c,&quot;United Kingdom&quot;),&quot;&quot;,TEXT(Renewal_Sales_Invoice__r.c2g__Opportunity__r.Billing_Country__c))
)</formula>
        <label>Invoice Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Company__c</fullName>
        <formula>Opportunity__r.Invoice_Company__r.Name</formula>
        <label>Invoice Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Currency_Symbol__c</fullName>
        <description>Created to use on the Invoice Template for drawloop</description>
        <formula>Renewal_Sales_Invoice__r.Currency_Symbol__c</formula>
        <label>Invoice Currency Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Currency__c</fullName>
        <description>Created to use on the Invoice Template for drawloop</description>
        <formula>Renewal_Sales_Invoice__r.c2g__InvoiceCurrency__r.Name</formula>
        <label>Invoice Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <description>Created to use on the Invoice Template for drawloop</description>
        <formula>Renewal_Sales_Invoice__r.c2g__InvoiceDescription__c</formula>
        <label>Invoice Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <description>Created to use on the Invoice Template for drawloop</description>
        <formula>Renewal_Sales_Invoice__r.c2g__DueDate__c</formula>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Net_Total__c</fullName>
        <description>Created to use on the Invoice Template for drawloop</description>
        <formula>Renewal_Sales_Invoice__r.c2g__NetTotal__c</formula>
        <label>Invoice Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Created to use on the Invoice Template for drawloop</description>
        <formula>Renewal_Sales_Invoice__r.Name</formula>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Reference__c</fullName>
        <description>Created to use on the Invoice Template for drawloop</description>
        <formula>Renewal_Sales_Invoice__r.Opportunity_Number__c</formula>
        <label>Invoice Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <picklist>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not-Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Tax_Total__c</fullName>
        <description>Created to use on the Invoice Template for drawloop</description>
        <formula>Renewal_Sales_Invoice__r.c2g__Tax1Total__c</formula>
        <label>Invoice Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_VAT_Registration_Number__c</fullName>
        <description>Created to use on the Invoice Template for drawloop</description>
        <formula>Renewal_Sales_Invoice__r.c2g__Account__r.c2g__CODAVATRegistrationNumber__c</formula>
        <label>Invoice VAT Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lapse_Date__c</fullName>
        <description>Calculates lapse date using end date + Earliest Lapse Days</description>
        <formula>End_Date__c + Earliest_Lapse_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lapse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lapse_Exception_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes subscription from the auto lapsing processes via workflow</description>
        <inlineHelpText>Check this box box if you require this subscription NOT to auto lapse</inlineHelpText>
        <label>Lapse Exception Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Invoice_Date__c</fullName>
        <description>Created to use on the Invoice Template for drawloop</description>
        <formula>Renewal_Sales_Invoice__r.c2g__InvoiceDate__c</formula>
        <label>Latest Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Invoice_Status__c</fullName>
        <description>Created to use on the Invoice Template for drawloop to determine if the latest sales invoice related is an Invoice or Proforma.</description>
        <formula>IF( ISBLANK(Renewal_Sales_Invoice__c),&apos;&apos;,
  IF(ISPICKVAL(Renewal_Sales_Invoice__r.c2g__InvoiceStatus__c, &quot;Complete&quot;) , &quot;INVOICE&quot;, &quot;PROFORMA&quot;)
)</formula>
        <label>Latest Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Invoice_Total__c</fullName>
        <description>Created to use on the Invoice Template for drawloop</description>
        <formula>Renewal_Sales_Invoice__r.c2g__InvoiceTotal__c</formula>
        <label>Latest Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field disables workflows - used for testing import of data</inlineHelpText>
        <label>Legacy Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Longest_Duration_Years__c</fullName>
        <label>Longest Duration Years</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longest_Reminder_Days__c</fullName>
        <description>This drives the subscription first remminder date, and is derived by taking the longest reminder days of all asscoiated sub lines (reminder days(Number)) which in turn is popoluated from (reminder days) which is a formula filed driven by Product__r.Initial_Reminder_Days__c.</description>
        <inlineHelpText>Formula dervied from the longest reminder days of associated subscription lines.</inlineHelpText>
        <label>Longest Reminder Days</label>
        <summarizedField>Subscription_Line__c.Reminder_Days_Number__c</summarizedField>
        <summaryForeignKey>Subscription_Line__c.Subscription__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Membership_Pack_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Records if Drawloop has created the drawloop membership pack.</description>
        <label>Membership Pack Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_pack_selection__c</fullName>
        <formula>IF(Includes_Membership_Product__c = True, &apos;CORE-&apos;,&apos;&apos;)+
IF(Includes_Info_Membership_Product__c = True,&apos;INFO-&apos;, &apos;&apos;)+
IF(Includes_Tools_Membership_Product__c = True,&apos;TOOLS-&apos;,&apos;&apos;)+
IF(Includes_Guides_Publication_Product__c = True,&apos;GUIDES-&apos;,&apos;&apos;)+
IF(Includes_HSWA_Publication_Product__c = True,&apos;HSWA-&apos;,&apos;&apos;)+
IF(Includes_Safety_Management_Product__c = True,&apos;SAFETY-&apos;,&apos;&apos;)</formula>
        <inlineHelpText>Used by LOOP to decide which membership pack to send to the customer.</inlineHelpText>
        <label>Subscription pack selection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Status__c</fullName>
        <description>Used to show the status held against the subscription BEFORE updating to &quot;Manual Admin&quot;</description>
        <inlineHelpText>Used to show the status held against the subscription BEFORE updating to &quot;Manual Admin&quot;</inlineHelpText>
        <label>Old Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_MEP_Status__c</fullName>
        <description>During the cleanup of membership data we updated all statuses of Subscriptions where CB status was in the renewing phase.  This field holds the backup of the original SFDC status</description>
        <label>Original MEP Status</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Start_date__c</fullName>
        <description>Denotes the date the original subscription was taken.</description>
        <label>Original Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PK_CB_OPP_ID__c</fullName>
        <description>This is the Primary Key of the Membership from the source Membership data and maps to  MEMBERSHIP.MEM_ID and Member_Period.MEP_ID on CB Database.</description>
        <externalId>true</externalId>
        <inlineHelpText>Mem ID/Mep ID - Membership Table and Member Period Tables on CB</inlineHelpText>
        <label>PK_CB_OPP_ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Stores Membership Password</description>
        <inlineHelpText>Stores Membership Password</inlineHelpText>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paying_By__c</fullName>
        <label>Paying By</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>